--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "discord-rich-presence",
+  "name": "discordjs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord-rpc": "^4.0.1"
+    "chalk": "^4.1.1",
+    "discordrpcgenerator": "^1.2.0",
+    "express": "^4.18.2",
+    "freeze-selfbot": "^1.3.0",
+    "winston": "^3.8.2"
   }
 }
